# convert-models

./: .gitignore  README.md
cpp/: .gitignore  README.md  environment.yml
cpp/src/: example.cpp
python/: README.md  compute_quality.py  convert_model.py  environment.yml  requirements.txt  run_onnx.py  run_opencv.py
python/configs/: compute_quality.yaml  quality_debfiqa.yaml
python/cr_fiqa/backbones/: iresnet.py
python/debfiqa/: debfiqa.py
python/src/: utils.py
python/src/debfiqa/: iresnet_magface.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
