[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"                                    # For loading images
show-image = "=0.14.0"                            # Currently need to pin version according to https://github.com/robohouse-delft/show-image-rs/issues/54
ndarray = "0.16"                                  # Data structure to use with ort
ort = "=2.0.0-rc.9"                               # For running inference with onnx models
approx = "0.5"                                    # For comparing results
clap = { version = "4.5", features = ["derive"] } # Command line parser
